# SocksTank

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  RPI.md  TODO.md  camera_detect.py  camera_shot.py  data.yaml  main.py  pyproject.toml  train.py
.github/workflows/: tests.yml  ui-e2e.yml
docs/: README.md  benchmarks.md  disk-benchmarks.md  roboflow.md  rpi4-config.txt  rpi4.md  rpi5-config.txt  rpi5-power.md  train_yolo8.md
docs/en/: README.md  benchmarks.md  dataset.md  disk-benchmarks.md  inference.md  infrastructure.md  launch.md  rpi.md  rpi4.md  rpi5-power.md  rpi5.md  training.md
docs/plans/: 2026-02-25-remote-inference-design.md  2026-02-26-warmup-and-cpp-ncnn-design.md  2026-03-06-ui-e2e-test-plan.md
docs/ru/: README.md  benchmarks.md  dataset.md  disk-benchmarks.md  inference.md  infrastructure.md  launch.md  rpi4.md  rpi5-power.md  rpi5.md  training.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AddGpuServerModal.tsx  ConfigPanel.tsx  EmergencyStop.tsx  InferencePanel.tsx  LedControl.tsx  ModeSelector.tsx  MotorControl.tsx  PlacesPanel.tsx  SensorDisplay.tsx  ServoControl.tsx  StatusBar.tsx  TerminatorPanel.tsx  VideoFeed.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: types.ts
frontend/tests/e2e/: app-shell.spec.ts  config-panel.spec.ts  edge-cases.spec.ts  inference-servers.spec.ts  motor-mode-estop.spec.ts  places-annotator-loading.spec.ts  places-workflow.spec.ts  servo-led.spec.ts
frontend/tests/e2e/support/: mockApp.ts
legacy/: bench.py  camera_detect.py
models/yolo11_best_ncnn_int8_model/: model.ncnn.param
models/yolo11_best_ncnn_model/: metadata.yaml  model_ncnn.py
ncnn_wrapper/: CMakeLists.txt  README.md
ncnn_wrapper/src/: bindings.cpp  detector.cpp  detector.h
scripts/: bench_rpi5.py  rpi5_config.txt  setup_rpi5.sh  sockstank.service
server/: app.py  camera.py  config.py  cpu_warmup.py  deploy.py  freenove_bridge.py  gpu_manager.py  hardware.py  inference.py  inference_server.py  mock.py  place_train_worker.py  places.py  routes_api.py  routes_gpu.py  routes_places.py  routes_video.py  routes_ws.py  schemas.py
server/drivers/: __init__.py  _detect.py  infrared.py  led.py  motor.py  servo.py  ultrasonic.py
tests/: test_camera.py  test_config.py  test_deploy.py  test_gpu_manager.py  test_place_train_worker.py  test_places_api.py  test_places_store.py
