[project]
name = "sockstank"
version = "0.1.0"
description = "Robot tank for sock detection with computer vision (YOLO)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.24.1",
    "ultralytics",
    "opencv-python-headless",
    "numpy",
    "fastapi>=0.117.1",
    "uvicorn[standard]>=0.37.0",
    "pydantic-settings>=2.13.1",
    "websockets>=16.0",
    "httpx>=0.28.1",
    "paramiko>=4.0.0",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = ["pre-commit>=4.3.0", "black>=25.9.0", "flake8>=7.3.0"]

[tool.black]
line-length = 140
